unpackaged/objects/Song__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <label>Artist</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative Music</fullName>
                </value>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Classical Music</fullName>
                </value>
                <value>
                    <fullName>Country Music</fullName>
                </value>
                <value>
                    <fullName>Dance Music</fullName>
                </value>
                <value>
                    <fullName>Easy Listening</fullName>
                </value>
                <value>
                    <fullName>Electronic Music</fullName>
                </value>
                <value>
                    <fullName>Hip Hop / Rap</fullName>
                </value>
                <value>
                    <fullName>Indie Pop</fullName>
                </value>
                <value>
                    <fullName>Jazz</fullName>
                </value>
                <value>
                    <fullName>Latin Music</fullName>
                </value>
                <value>
                    <fullName>New Age</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Pop (Popular Music)</fullName>
                </value>
                <value>
                    <fullName>R&amp;B / Soul</fullName>
                </value>
                <value>
                    <fullName>Reggae</fullName>
                </value>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>World Music / Beats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_m__c</fullName>
        <label>Length (m)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Track Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Licenses__c</fullName>
        <label>Track Licenses</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Song</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_track_count</fullName>
        <active>false</active>
        <errorConditionFormula>Track_Count__c&gt;Track_Licenses__c</errorConditionFormula>
        <errorDisplayField>Track_Licenses__c</errorDisplayField>
        <errorMessage>Exceed</errorMessage>
    </validationRules>
</CustomObject>